--- a/Example/Podfile
+++ b/Example/Podfile
@@ -8,10 +8,10 @@ target 'YQAlertController_Example' do
   pod 'YQAlertController', :path => '../'
 
   #pod 'Moya/RxSwift', '~> 12.0'
-  #pod 'SnapKit', '~> 4.0.0'
+  pod 'SnapKit', '~> 4.0.0'
   #pod 'RxCoreData', '~> 0.5.1'
   #pod 'RxDataSources', '~> 3.0'
-
+  pod 'SwiftPopup'
   target 'YQAlertController_Tests' do
     inherit! :search_paths
 
