--- a/Example/Podfile
+++ b/Example/Podfile
@@ -11,6 +11,7 @@ target 'YQAlertController_Example' do
   pod 'SnapKit', '~> 4.0.0'
   #pod 'RxCoreData', '~> 0.5.1'
   #pod 'RxDataSources', '~> 3.0'
+  pod 'KeyboardMan'
   pod 'SwiftPopup'
   target 'YQAlertController_Tests' do
     inherit! :search_paths
