--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,13 +2,13 @@ source 'https://github.com/CocoaPods/Specs.git'
 source 'https://gitee.com/padding/YQPods.git'
 
 use_frameworks!
-platform :ios, '9.0'
+platform :ios, '10.0'
 
 target 'YQAlertController_Example' do
   pod 'YQAlertController', :path => '../'
 
   #pod 'Moya/RxSwift', '~> 12.0'
-  pod 'SnapKit', '~> 4.0.0'
+  pod 'SnapKit'
   #pod 'RxCoreData', '~> 0.5.1'
   #pod 'RxDataSources', '~> 3.0'
   pod 'KeyboardMan'
